--- a/src/_colors.css
+++ b/src/_colors.css
@@ -54,35 +54,26 @@
   --dark-red:  #e7040f;
   --red:  #ff4136;
   --light-red:  #ff725c;
-
   --orange:  #ff6300;
   --gold:  #ffb700;
-
   --yellow:  #ffd700;
   --light-yellow:  #fbf1a9;
-
   --purple:  #5e2ca5;
   --light-purple:  #a463f2;
-
   --dark-pink:  #d5008f;
   --hot-pink: #ff41b4;
   --pink:  #ff80cc;
   --light-pink:  #ffa3d7;
-
   --dark-green:  #137752;
   --green:  #19a974;
   --light-green:  #9eebcf;
-
   --navy:  #001b44;
-
-  --dark-blue: #4a868a;
-  --blue: #70cbd2;
+  --dark-blue:  #00449e;
+  --blue:  #357edd;
   --light-blue:  #96ccff;
   --lightest-blue:  #cdecff;
-
   --washed-blue:  #f6fffe;
   --washed-green:  #e8fdf5;
   --washed-yellow:  #fffceb;
   --washed-red:  #ffdfdf;
-
 }
