Mockup for search page

--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -1717,6 +1717,7 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .f2 { font-size: 2.25rem; }
 .f3 { font-size: 1.5rem; }
 .f4 { font-size: 1.25rem; }
+.f4-5 { font-size: 1.125rem; }
 .f5 { font-size: 1rem; }
 .f6 { font-size: .875rem; }
 .f7 { font-size: .75rem; }
